Closed
Bug 190194
Opened 23 years ago
Closed 23 years ago
cache leak regression from recent checkin
Categories
(Core :: Networking: Cache, defect, P2)
Core
Networking: Cache
Tracking
()
RESOLVED
FIXED
mozilla1.3beta
People
(Reporter: darin.moz, Assigned: darin.moz)
References
()
Details
(Keywords: memory-leak, regression)
Attachments
(1 file)
|
504 bytes,
patch
|
gordon
:
review+
bzbarsky
:
superreview+
asa
:
approval1.3b+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: leak: '!mStreamIO', file
/Users/darinf/mozilla-trunk/mozilla/netwerk/cache/src/nsDiskCacheStreams.cpp,
line 214
Break: at file
/Users/darinf/mozilla-trunk/mozilla/netwerk/cache/src/nsDiskCacheStreams.cpp,
line 214
this assertion started appearing today following yesterday's fix for the cache
crash (see bug 189779). seems like that patch did not do the trick :(
| Assignee | ||
Comment 1•23 years ago
|
||
simple fix. my patch yesterday was too rushed.
| Assignee | ||
Updated•23 years ago
|
Severity: normal → major
Status: NEW → ASSIGNED
Priority: -- → P2
Target Milestone: --- → mozilla1.3beta
| Assignee | ||
Updated•23 years ago
|
Attachment #112351 -
Flags: superreview?(bzbarsky)
Attachment #112351 -
Flags: review?(gordon)
Comment 2•23 years ago
|
||
Comment on attachment 112351 [details] [diff] [review]
v1 patch
Do we still need that other ReleaseStreamIO call?
Attachment #112351 -
Flags: review?(gordon) → review+
Comment 3•23 years ago
|
||
Comment on attachment 112351 [details] [diff] [review]
v1 patch
darin says we do.
Attachment #112351 -
Flags: superreview?(bzbarsky) → superreview+
| Assignee | ||
Comment 4•23 years ago
|
||
Comment on attachment 112351 [details] [diff] [review]
v1 patch
requesting approval to checkin simple one-line memory leak fix for 1.3b.
Attachment #112351 -
Flags: approval1.3b?
| Assignee | ||
Updated•23 years ago
|
Flags: blocking1.3b?
Comment 5•23 years ago
|
||
Comment on attachment 112351 [details] [diff] [review]
v1 patch
a=asa (on behalf of drivers) for checkin to 1.3beta.
Attachment #112351 -
Flags: approval1.3b? → approval1.3b+
| Assignee | ||
Comment 6•23 years ago
|
||
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•23 years ago
|
Flags: blocking1.3b?
You need to log in
before you can comment on or make changes to this bug.
Description
•