fixes bug 190194 "cache leak regression from recent checkin" r=gordon sr=bzbarsky a=asa